hphp/hack/test/typecheck/T90599414.php.exp
File "T90599414.php", line 6, characters 3-10:
This value is not a valid key type for this container (Typing[4298])
  File "T90599414.php", line 5, characters 8-13:
  This container is an object of type Map<[unresolved], [unresolved]>
  File "T90599414.php", line 6, characters 6-9:
  Null cannot be used as a key for an object of type Map<[unresolved], [unresolved]>
